@@ -14,11 +14,11 @@
    GNU General Public License for more details.
 
    You should have received a copy of the GNU General Public License
-   along with GAS; see the file COPYING.  If not, write to
-   the Free Software Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
+   along with GAS; see the file COPYING.  If not, write to the Free
+   Software Foundation, 59 Temple Place - Suite 330, Boston, MA
+   02111-1307, USA.  */
 
 /*"input_file.c":Operating-system dependant functions to read source files.*/
-
 
 /*
  * No matter what the operating system, this module must provide the
@@ -64,5 +64,3 @@ void input_file_close PARAMS ((void));
 void input_file_end PARAMS ((void));
 void input_file_open PARAMS ((char *filename, int pre));
 void input_file_pop PARAMS ((char *arg));
-
-/* end of input_file.h */
