@@ -1,3 +1,9 @@
+2000-11-06  Kazu Hirata  <kazu@hxi.com>
+
+	* input-file.c: Fix formatting.
+	* input-file.h: Likewise.
+	* input-scrub.c: Likewise.
+
 2000-11-06  Nick Clifton  <nickc@redhat.com>
 
 	* doc/as.texinfo: Add GNU Free Documentation License.
